# AnimeDownloader

./: main.py  pyproject.toml
modules/: download_files.py  get_links.py  get_response.py
