[tool.poetry]
name = "downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
bs4 = "^0.0.2"
requests = "^2.32.3"
user-agent = "^0.1.10"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
requests-html = "^0.10.0"
lxml-html-clean = "^0.4.1"
pytube = "^15.0.0"
curl-cffi = "^0.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
